--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+.active{color:brown;}
+
+.refHooks{
+    margin: 100px 0px 0px 450px;
+    border: 1px solid black;
+    padding: 10px;
+    width: 300px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* UseReducer */
+
+.reducer{
+    border: 1px solid black;
+    margin:100px 0px 0px 450px;
+    padding: 10px;
+    width: 300px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reducer button{
+    padding: 6px;
+    margin: 5px;
 }
